GyhGrammar.g4
grammar GyhGrammar;



// Programa -> ':' 'DEC' ListaDeclaracoes ':' 'PROG' ListaComandos;
programa: Delim PCDec listaDeclaracoes Delim PCProg listaComandos;

// ListaDeclaracoes -> Declaracao ListaDeclaracoes | Declaracao;
listaDeclaracoes: declaracao listaDeclaracoes | declaracao;

// Declaracao -> VARIAVEL ':' TipoVar;
declaracao: Var Delim tipoVar;

// TipoVar -> 'INT' | 'REAL';
tipoVar: PCInt | PCReal;

// --- REMOVIDA A RECURSÃO À ESQUERDA DAS EXPRESSÕES ARITMÉTICAS ---
expressaoAritmetica: termoAritmetico expressaoAritmeticaL;

expressaoAritmeticaL: OpAritSoma termoAritmetico expressaoAritmeticaL
                    | OpAritSub termoAritmetico expressaoAritmeticaL
                    | /* vazio */ ;

termoAritmetico: fatorAritmetico termoAritmeticoL;

termoAritmeticoL: OpAritMult fatorAritmetico termoAritmeticoL
                 | OpAritDiv fatorAritmetico termoAritmeticoL
                 | /* vazio */ ;

// FatorAritmetico -> NUMINT | NUMREAL | VARIAVEL | '(' ExpressaoAritmetica ')'
fatorAritmetico: NumInt 
               | NumReal 
               | Var 
               | AbrePar expressaoAritmetica FechaPar;

// --- REMOVIDA A RECURSÃO À ESQUERDA DAS EXPRESSÕES RELACIONAIS ---
expressaoRelacional: termoRelacional expressaoRelacionalL;

expressaoRelacionalL: operadorBooleano termoRelacional expressaoRelacionalL
                    | /* vazio */ ;

// TermoRelacional -> ExpressaoAritmetica OP_REL ExpressaoAritmetica | '(' ExpressaoRelacional ')';
termoRelacional: expressaoAritmetica opRel expressaoAritmetica 
               | AbrePar expressaoRelacional FechaPar;

// Regra auxiliar para agrupar os seus tokens relacionais
opRel: OpRelMenor 
     | OpRelMenorIgual 
     | OpRelMaior 
     | OpRelMaiorIgual 
     | OpRelIgual 
     | OpRelDif;

// OperadorBooleano -> 'E' | 'OU';
operadorBooleano: OpBoolE | OpBoolOu;

// ListaComandos -> Comando ListaComandos | Comando;
listaComandos: comando listaComandos | comando;

// Comando -> ComandoAtribuicao | ComandoEntrada | ComandoSaida | ComandoCondicao | ComandoRepeticao | SubAlgoritmo;
comando: comandoAtribuicao 
       | comandoEntrada 
       | comandoSaida 
       | comandoCondicao 
       | comandoRepeticao 
       | subAlgoritmo;

// ComandoAtribuicao -> VARIAVEL ':=' ExpressaoAritmetica;
comandoAtribuicao: Var Atrib expressaoAritmetica;

// ComandoEntrada -> 'LER' VARIAVEL;
comandoEntrada: PCLer Var;

// ComandoSaida -> 'IMPRIMIR' VARIAVEL | 'IMPRIMIR' CADEIA;
comandoSaida: PCImprimir Var 
            | PCImprimir STRING;

// ComandoCondicao -> 'SE' ExpressaoRelacional 'ENTAO' Comando | 'SE' ExpressaoRelacional 'ENTAO' Comando 'SENAO' Comando;
comandoCondicao: PCSe expressaoRelacional PCEntao comando 
               | PCSe expressaoRelacional PCEntao comando PCSenao comando;

// ComandoRepeticao -> 'ENQTO' ExpressaoRelacional Comando;
comandoRepeticao: PCEnqto expressaoRelacional comando;

// SubAlgoritmo -> 'INI' ListaComandos 'FIM';
subAlgoritmo: PCIni listaComandos PCFim;


PCDec     : 'DEC';
PCProg    : 'PROG';
PCInt     : 'INT';
PCReal    : 'REAL';
PCLer     : 'LER';
PCImprimir: 'IMPRIMIR';
PCSe      : 'SE';
PCSenao   : 'SENAO';
PCEntao   : 'ENTAO';
PCEnqto   : 'ENQTO';
PCIni     : 'INI';
PCFim     : 'FIM';

OpAritMult       : '*';
OpAritDiv        : '/';
OpAritSoma       : '+';
OpAritSub        : '-';

OpRelMenor       : '<';
OpRelMenorIgual  : '<=';
OpRelMaior       : '>';
OpRelMaiorIgual  : '>=';
OpRelIgual       : '==';
OpRelDif         : '!=';

OpBoolE          : 'E';
OpBoolOu         : 'OU';

Delim            : ':';
Atrib            : ':=';
AbrePar          : '(';
FechaPar         : ')';

Var               : [a-z][a-zA-Z0-9]*;           
NumInt            : [0-9]+;                      
NumReal           : [0-9]+ '.' [0-9]+;           
STRING            : '"' (~["\r\n\\])* '"' | '\'' (~['\r\n\\])* '\'';

// Comentários
COMMENT           : '#' ~[\r\n]* -> skip;
WS                : [ \t\r\n]+ -> skip;
