src/main/java/GyhGrammarParser.java
// Generated from GyhGrammar.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GyhGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PCDec=1, PCProg=2, PCInt=3, PCReal=4, PCLer=5, PCImprimir=6, PCSe=7, PCSenao=8, 
		PCEntao=9, PCEnqto=10, PCIni=11, PCFim=12, OpAritMult=13, OpAritDiv=14, 
		OpAritSoma=15, OpAritSub=16, OpRelMenor=17, OpRelMenorIgual=18, OpRelMaior=19, 
		OpRelMaiorIgual=20, OpRelIgual=21, OpRelDif=22, OpBoolE=23, OpBoolOu=24, 
		Delim=25, Atrib=26, AbrePar=27, FechaPar=28, Var=29, NumInt=30, NumReal=31, 
		STRING=32, COMMENT=33, WS=34;
	public static final int
		RULE_programa = 0, RULE_listaDeclaracoes = 1, RULE_declaracao = 2, RULE_tipoVar = 3, 
		RULE_expressaoAritmetica = 4, RULE_expressaoAritmeticaL = 5, RULE_termoAritmetico = 6, 
		RULE_termoAritmeticoL = 7, RULE_fatorAritmetico = 8, RULE_expressaoRelacional = 9, 
		RULE_expressaoRelacionalL = 10, RULE_termoRelacional = 11, RULE_opRel = 12, 
		RULE_operadorBooleano = 13, RULE_listaComandos = 14, RULE_comando = 15, 
		RULE_comandoAtribuicao = 16, RULE_comandoEntrada = 17, RULE_comandoSaida = 18, 
		RULE_comandoCondicao = 19, RULE_comandoRepeticao = 20, RULE_subAlgoritmo = 21;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "listaDeclaracoes", "declaracao", "tipoVar", "expressaoAritmetica", 
			"expressaoAritmeticaL", "termoAritmetico", "termoAritmeticoL", "fatorAritmetico", 
			"expressaoRelacional", "expressaoRelacionalL", "termoRelacional", "opRel", 
			"operadorBooleano", "listaComandos", "comando", "comandoAtribuicao", 
			"comandoEntrada", "comandoSaida", "comandoCondicao", "comandoRepeticao", 
			"subAlgoritmo"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'DEC'", "'PROG'", "'INT'", "'REAL'", "'LER'", "'IMPRIMIR'", "'SE'", 
			"'SENAO'", "'ENTAO'", "'ENQTO'", "'INI'", "'FIM'", "'*'", "'/'", "'+'", 
			"'-'", "'<'", "'<='", "'>'", "'>='", "'=='", "'!='", "'E'", "'OU'", "':'", 
			"':='", "'('", "')'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PCDec", "PCProg", "PCInt", "PCReal", "PCLer", "PCImprimir", "PCSe", 
			"PCSenao", "PCEntao", "PCEnqto", "PCIni", "PCFim", "OpAritMult", "OpAritDiv", 
			"OpAritSoma", "OpAritSub", "OpRelMenor", "OpRelMenorIgual", "OpRelMaior", 
			"OpRelMaiorIgual", "OpRelIgual", "OpRelDif", "OpBoolE", "OpBoolOu", "Delim", 
			"Atrib", "AbrePar", "FechaPar", "Var", "NumInt", "NumReal", "STRING", 
			"COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "GyhGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GyhGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramaContext extends ParserRuleContext {
		public List<TerminalNode> Delim() { return getTokens(GyhGrammarParser.Delim); }
		public TerminalNode Delim(int i) {
			return getToken(GyhGrammarParser.Delim, i);
		}
		public TerminalNode PCDec() { return getToken(GyhGrammarParser.PCDec, 0); }
		public ListaDeclaracoesContext listaDeclaracoes() {
			return getRuleContext(ListaDeclaracoesContext.class,0);
		}
		public TerminalNode PCProg() { return getToken(GyhGrammarParser.PCProg, 0); }
		public ListaComandosContext listaComandos() {
			return getRuleContext(ListaComandosContext.class,0);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GyhGrammarListener ) ((GyhGrammarListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GyhGrammarListener ) ((GyhGrammarListener)listener).exitPrograma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GyhGrammarVisitor ) return ((GyhGrammarVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			match(Delim);
			setState(45);
			match(PCDec);
			setState(46);
			listaDeclaracoes();
			setState(47);
			match(Delim);
			setState(48);
			match(PCProg);
			setState(49);
			listaComandos();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListaDeclaracoesContext extends ParserRuleContext {
		public DeclaracaoContext declaracao() {
			return getRuleContext(DeclaracaoContext.class,0);
		}
		public ListaDeclaracoesContext listaDeclaracoes() {
			return getRuleContext(ListaDeclaracoesContext.class,0);
		}
		public ListaDeclaracoesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listaDeclaracoes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GyhGrammarListener ) ((GyhGrammarListener)listener).enterListaDeclaracoes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GyhGrammarListener ) ((GyhGrammarListener)listener).exitListaDeclaracoes(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GyhGrammarVisitor ) return ((GyhGrammarVisitor<? extends T>)visitor).visitListaDeclaracoes(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListaDeclaracoesContext listaDeclaracoes() throws RecognitionException {
		ListaDeclaracoesContext _localctx = new ListaDeclaracoesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_listaDeclaracoes);
		try {
			setState(55);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(51);
				declaracao();
				setState(52);
				listaDeclaracoes();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(54);
				declaracao();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclaracaoContext extends ParserRuleContext {
		public TerminalNode Var() { return getToken(GyhGrammarParser.Var, 0); }
		public TerminalNode Delim() { return getToken(GyhGrammarParser.Delim, 0); }
		public TipoVarContext tipoVar() {
			return getRuleContext(TipoVarContext.class,0);
		}
		public DeclaracaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GyhGrammarListener ) ((GyhGrammarListener)listener).enterDeclaracao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GyhGrammarListener ) ((GyhGrammarListener)listener).exitDeclaracao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GyhGrammarVisitor ) return ((GyhGrammarVisitor<? extends T>)visitor).visitDeclaracao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracaoContext declaracao() throws RecognitionException {
		DeclaracaoContext _localctx = new DeclaracaoContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaracao);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			match(Var);
			setState(58);
			match(Delim);
			setState(59);
			tipoVar();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TipoVarContext extends ParserRuleContext {
		public TerminalNode PCInt() { return getToken(GyhGrammarParser.PCInt, 0); }
		public TerminalNode PCReal() { return getToken(GyhGrammarParser.PCReal, 0); }
		public TipoVarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipoVar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GyhGrammarListener ) ((GyhGrammarListener)listener).enterTipoVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GyhGrammarListener ) ((GyhGrammarListener)listener).exitTipoVar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GyhGrammarVisitor ) return ((GyhGrammarVisitor<? extends T>)visitor).visitTipoVar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TipoVarContext tipoVar() throws RecognitionException {
		TipoVarContext _localctx = new TipoVarContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_tipoVar);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			_la = _input.LA(1);
			if ( !(_la==PCInt || _la==PCReal) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressaoAritmeticaContext extends ParserRuleContext {
		public TermoAritmeticoContext termoAritmetico() {
			return getRuleContext(TermoAritmeticoContext.class,0);
		}
		public ExpressaoAritmeticaLContext expressaoAritmeticaL() {
			return getRuleContext(ExpressaoAritmeticaLContext.class,0);
		}
		public ExpressaoAritmeticaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressaoAritmetica; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GyhGrammarListener ) ((GyhGrammarListener)listener).enterExpressaoAritmetica(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GyhGrammarListener ) ((GyhGrammarListener)listener).exitExpressaoAritmetica(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GyhGrammarVisitor ) return ((GyhGrammarVisitor<? extends T>)visitor).visitExpressaoAritmetica(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressaoAritmeticaContext expressaoAritmetica() throws RecognitionException {
		ExpressaoAritmeticaContext _localctx = new ExpressaoAritmeticaContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_expressaoAritmetica);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			termoAritmetico();
			setState(64);
			expressaoAritmeticaL();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressaoAritmeticaLContext extends ParserRuleContext {
		public TerminalNode OpAritSoma() { return getToken(GyhGrammarParser.OpAritSoma, 0); }
		public TermoAritmeticoContext termoAritmetico() {
			return getRuleContext(TermoAritmeticoContext.class,0);
		}
		public ExpressaoAritmeticaLContext expressaoAritmeticaL() {
			return getRuleContext(ExpressaoAritmeticaLContext.class,0);
		}
		public TerminalNode OpAritSub() { return getToken(GyhGrammarParser.OpAritSub, 0); }
		public ExpressaoAritmeticaLContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressaoAritmeticaL; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GyhGrammarListener ) ((GyhGrammarListener)listener).enterExpressaoAritmeticaL(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GyhGrammarListener ) ((GyhGrammarListener)listener).exitExpressaoAritmeticaL(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GyhGrammarVisitor ) return ((GyhGrammarVisitor<? extends T>)visitor).visitExpressaoAritmeticaL(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressaoAritmeticaLContext expressaoAritmeticaL() throws RecognitionException {
		ExpressaoAritmeticaLContext _localctx = new ExpressaoAritmeticaLContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_expressaoAritmeticaL);
		try {
			setState(75);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case OpAritSoma:
				enterOuterAlt(_localctx, 1);
				{
				setState(66);
				match(OpAritSoma);
				setState(67);
				termoAritmetico();
				setState(68);
				expressaoAritmeticaL();
				}
				break;
			case OpAritSub:
				enterOuterAlt(_localctx, 2);
				{
				setState(70);
				match(OpAritSub);
				setState(71);
				termoAritmetico();
				setState(72);
				expressaoAritmeticaL();
				}
				break;
			case EOF:
			case PCLer:
			case PCImprimir:
			case PCSe:
			case PCSenao:
			case PCEntao:
			case PCEnqto:
			case PCIni:
			case PCFim:
			case OpRelMenor:
			case OpRelMenorIgual:
			case OpRelMaior:
			case OpRelMaiorIgual:
			case OpRelIgual:
			case OpRelDif:
			case OpBoolE:
			case OpBoolOu:
			case FechaPar:
			case Var:
				enterOuterAlt(_localctx, 3);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TermoAritmeticoContext extends ParserRuleContext {
		public FatorAritmeticoContext fatorAritmetico() {
			return getRuleContext(FatorAritmeticoContext.class,0);
		}
		public TermoAritmeticoLContext termoAritmeticoL() {
			return getRuleContext(TermoAritmeticoLContext.class,0);
		}
		public TermoAritmeticoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_termoAritmetico; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GyhGrammarListener ) ((GyhGrammarListener)listener).enterTermoAritmetico(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GyhGrammarListener ) ((GyhGrammarListener)listener).exitTermoAritmetico(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GyhGrammarVisitor ) return ((GyhGrammarVisitor<? extends T>)visitor).visitTermoAritmetico(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TermoAritmeticoContext termoAritmetico() throws RecognitionException {
		TermoAritmeticoContext _localctx = new TermoAritmeticoContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_termoAritmetico);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			fatorAritmetico();
			setState(78);
			termoAritmeticoL();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TermoAritmeticoLContext extends ParserRuleContext {
		public TerminalNode OpAritMult() { return getToken(GyhGrammarParser.OpAritMult, 0); }
		public FatorAritmeticoContext fatorAritmetico() {
			return getRuleContext(FatorAritmeticoContext.class,0);
		}
		public TermoAritmeticoLContext termoAritmeticoL() {
			return getRuleContext(TermoAritmeticoLContext.class,0);
		}
		public TerminalNode OpAritDiv() { return getToken(GyhGrammarParser.OpAritDiv, 0); }
		public TermoAritmeticoLContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_termoAritmeticoL; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GyhGrammarListener ) ((GyhGrammarListener)listener).enterTermoAritmeticoL(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GyhGrammarListener ) ((GyhGrammarListener)listener).exitTermoAritmeticoL(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GyhGrammarVisitor ) return ((GyhGrammarVisitor<? extends T>)visitor).visitTermoAritmeticoL(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TermoAritmeticoLContext termoAritmeticoL() throws RecognitionException {
		TermoAritmeticoLContext _localctx = new TermoAritmeticoLContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_termoAritmeticoL);
		try {
			setState(89);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case OpAritMult:
				enterOuterAlt(_localctx, 1);
				{
				setState(80);
				match(OpAritMult);
				setState(81);
				fatorAritmetico();
				setState(82);
				termoAritmeticoL();
				}
				break;
			case OpAritDiv:
				enterOuterAlt(_localctx, 2);
				{
				setState(84);
				match(OpAritDiv);
				setState(85);
				fatorAritmetico();
				setState(86);
				termoAritmeticoL();
				}
				break;
			case EOF:
			case PCLer:
			case PCImprimir:
			case PCSe:
			case PCSenao:
			case PCEntao:
			case PCEnqto:
			case PCIni:
			case PCFim:
			case OpAritSoma:
			case OpAritSub:
			case OpRelMenor:
			case OpRelMenorIgual:
			case OpRelMaior:
			case OpRelMaiorIgual:
			case OpRelIgual:
			case OpRelDif:
			case OpBoolE:
			case OpBoolOu:
			case FechaPar:
			case Var:
				enterOuterAlt(_localctx, 3);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FatorAritmeticoContext extends ParserRuleContext {
		public TerminalNode NumInt() { return getToken(GyhGrammarParser.NumInt, 0); }
		public TerminalNode NumReal() { return getToken(GyhGrammarParser.NumReal, 0); }
		public TerminalNode Var() { return getToken(GyhGrammarParser.Var, 0); }
		public TerminalNode AbrePar() { return getToken(GyhGrammarParser.AbrePar, 0); }
		public ExpressaoAritmeticaContext expressaoAritmetica() {
			return getRuleContext(ExpressaoAritmeticaContext.class,0);
		}
		public TerminalNode FechaPar() { return getToken(GyhGrammarParser.FechaPar, 0); }
		public FatorAritmeticoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fatorAritmetico; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GyhGrammarListener ) ((GyhGrammarListener)listener).enterFatorAritmetico(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GyhGrammarListener ) ((GyhGrammarListener)listener).exitFatorAritmetico(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GyhGrammarVisitor ) return ((GyhGrammarVisitor<? extends T>)visitor).visitFatorAritmetico(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FatorAritmeticoContext fatorAritmetico() throws RecognitionException {
		FatorAritmeticoContext _localctx = new FatorAritmeticoContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_fatorAritmetico);
		try {
			setState(98);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NumInt:
				enterOuterAlt(_localctx, 1);
				{
				setState(91);
				match(NumInt);
				}
				break;
			case NumReal:
				enterOuterAlt(_localctx, 2);
				{
				setState(92);
				match(NumReal);
				}
				break;
			case Var:
				enterOuterAlt(_localctx, 3);
				{
				setState(93);
				match(Var);
				}
				break;
			case AbrePar:
				enterOuterAlt(_localctx, 4);
				{
				setState(94);
				match(AbrePar);
				setState(95);
				expressaoAritmetica();
				setState(96);
				match(FechaPar);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressaoRelacionalContext extends ParserRuleContext {
		public TermoRelacionalContext termoRelacional() {
			return getRuleContext(TermoRelacionalContext.class,0);
		}
		public ExpressaoRelacionalLContext expressaoRelacionalL() {
			return getRuleContext(ExpressaoRelacionalLContext.class,0);
		}
		public ExpressaoRelacionalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressaoRelacional; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GyhGrammarListener ) ((GyhGrammarListener)listener).enterExpressaoRelacional(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GyhGrammarListener ) ((GyhGrammarListener)listener).exitExpressaoRelacional(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GyhGrammarVisitor ) return ((GyhGrammarVisitor<? extends T>)visitor).visitExpressaoRelacional(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressaoRelacionalContext expressaoRelacional() throws RecognitionException {
		ExpressaoRelacionalContext _localctx = new ExpressaoRelacionalContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_expressaoRelacional);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			termoRelacional();
			setState(101);
			expressaoRelacionalL();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressaoRelacionalLContext extends ParserRuleContext {
		public OperadorBooleanoContext operadorBooleano() {
			return getRuleContext(OperadorBooleanoContext.class,0);
		}
		public TermoRelacionalContext termoRelacional() {
			return getRuleContext(TermoRelacionalContext.class,0);
		}
		public ExpressaoRelacionalLContext expressaoRelacionalL() {
			return getRuleContext(ExpressaoRelacionalLContext.class,0);
		}
		public ExpressaoRelacionalLContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressaoRelacionalL; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GyhGrammarListener ) ((GyhGrammarListener)listener).enterExpressaoRelacionalL(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GyhGrammarListener ) ((GyhGrammarListener)listener).exitExpressaoRelacionalL(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GyhGrammarVisitor ) return ((GyhGrammarVisitor<? extends T>)visitor).visitExpressaoRelacionalL(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressaoRelacionalLContext expressaoRelacionalL() throws RecognitionException {
		ExpressaoRelacionalLContext _localctx = new ExpressaoRelacionalLContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_expressaoRelacionalL);
		try {
			setState(108);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case OpBoolE:
			case OpBoolOu:
				enterOuterAlt(_localctx, 1);
				{
				setState(103);
				operadorBooleano();
				setState(104);
				termoRelacional();
				setState(105);
				expressaoRelacionalL();
				}
				break;
			case PCLer:
			case PCImprimir:
			case PCSe:
			case PCEntao:
			case PCEnqto:
			case PCIni:
			case FechaPar:
			case Var:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
